Сделан подвал страницы

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <p lang="en">WebStudio</p>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26
+            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </address>
+    </footer>
     
 </body>
 </html>
