Логотип в футере переделан на ссылку

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
     </main>
     <footer>
-        <p lang="en">WebStudio</p>
+        <a href="/" lang="en">WebStudio</a>
         <address>
             г. Киев, пр-т Леси Украинки, 26
             <a href="mailto:info@example.com">info@example.com</a>
