--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
     <footer>
         <a href="/" lang="en">WebStudio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <ul>
+                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
     
